--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,5 +1,11 @@
 {
-  "packages": {
-    "./": "0.1.0"
-  }
+  "branches": [
+    {
+      "branch": "main",
+      "release-type": "rust",
+      "bump-minor-pre-major": true,
+      "bump-patch-for-minor-pre-major": true
+    }
+  ]
 }
+
