--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Launch Release Please
-        uses: google-github-actions/release-please-action@v4
-        id: release
+      - name: Check out repository
+        uses: actions/checkout@v3
         with:
-          token: ${{ github.token }}
+          fetch-depth: 0
+
+      - name: Generate a changelog
+        uses: orhun/git-cliff-action@v3
+        with:
+          config: cliff.toml
+          args: --verbose
+        env:
+          OUTPUT: CHANGELOG.md
+          GITHUB_REPO: ${{ github.repository }}
