--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,6 +13,7 @@ jobs:
           fetch-depth: 0
 
       - name: Generate a changelog
+        id: changelog
         uses: orhun/git-cliff-action@v3
         with:
           config: cliff.toml
@@ -41,6 +42,6 @@ jobs:
         with:
           tag: ${{ steps.tag_version.outputs.new_tag }}
           name: Release ${{ steps.tag_version.outputs.new_tag }}
-          body: ${{ steps.tag_version.outputs.changelog }}
+          body: ${{ steps.changelog.outputs.changes }}
 
 
