--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
           git commit -m "Update changelog"
           git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git main
 
-  bump_version:
+  create_release:
     runs-on: ubuntu-latest
     needs: commit_changelog
     steps:
@@ -60,30 +60,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Bump version
-        id: bump_version
-        run: |
-          git tag -a v$(date +'%Y.%m.%d') -m "Release $(date +'%Y.%m.%d')"
-          git push origin --tags
-
-      - name: Get the new tag
-        id: get_new_tag
-        run: echo "::set-output name=new_tag::$(git describe --tags $(git rev-list --tags --max-count=1))"
-
-  create_release:
-    runs-on: ubuntu-latest
-    needs: bump_version
-    steps:
-      - name: Check out repository
-        uses: actions/checkout@v4
+    - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.2
         with:
-          fetch-depth: 0
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ steps.get_new_tag.outputs.new_tag }}
-          name: Release ${{ steps.get_new_tag.outputs.new_tag }}
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.tag_version.outputs.new_tag }}
           bodyFile: CHANGELOG.md
-
