--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,9 +44,10 @@ jobs:
     needs: generate_changelog
     steps:
       - name: Wait for manual approval
-        uses: maneyko/manual-approval@v1.0.0
+        uses: trstringer/manual-approval@v1
         with:
-          job_name: 'Changelog Verification'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          prompt: "Please review the changelog and approve this workflow to continue with the release process."
 
   commit_changelog:
     runs-on: ubuntu-latest
