--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,8 +46,8 @@ jobs:
       - name: Wait for manual approval
         uses: trstringer/manual-approval@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          prompt: "Please review the changelog and approve this workflow to continue with the release process."
+          approvers: '["alex-robert-fr"]' # Replace with actual GitHub usernames
+          minimum-approvals: 1
 
   commit_changelog:
     runs-on: ubuntu-latest
