--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,8 +88,15 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Generate latest changelog
-        run: git cliff --latest > latest_changelog.md
+    - name: Generate a changelog
+        id: changelog
+        uses: orhun/git-cliff-action@v3
+        with:
+          config: cliff.toml
+          args: --verbose --bump --latest
+        env:
+          OUTPUT: latest_changelog.md
+          GITHUB_REPO: ${{ github.repository }}
 
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
