--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,13 +25,10 @@ jobs:
 
       - name: Generate a changelog
         id: changelog
-        uses: orhun/git-cliff-action@v3
         run: |
           version=$(git cliff --bump)
           echo "version=$version" >> $GITHUB_ENV
-        with:
-          config: cliff.toml
-          args: --verbose --bump
+          git cliff --config cliff.toml --output CHANGELOG.md
         env:
           OUTPUT: CHANGELOG.md
           GITHUB_REPO: ${{ github.repository }}
