--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,12 +23,16 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install git-cliff
+        uses: taiki-e/install-action@git-cliff
+
       - name: Generate a changelog
         id: changelog
-        run: |
-          version=$(git cliff --bump)
-          echo "version=$version" >> $GITHUB_ENV
-          git cliff --config cliff.toml --output CHANGELOG.md
+        run: git cliff --verbose --config cliff.toml --output CHANGELOG.md
+        uses: orhun/git-cliff-action@v3
+        with:
+          config: cliff.toml
+          args: --verbose --bump
         env:
           OUTPUT: CHANGELOG.md
           GITHUB_REPO: ${{ github.repository }}
