--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+env:
+  TAG_VERSION: v0.0.0
 
 jobs:
   checkout:
@@ -31,7 +33,7 @@ jobs:
         run: |
           git cliff --bump -o CHANGELOG.md
           version=$(git cliff --bump)
-          echo "version=$version" >> $GITHUB_ENV
+          echo "version=$version" >> $TAG_VERSION
 
   manual_approval:
     runs-on: ubuntu-latest
