--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
           git cliff --bump -o CHANGELOG.md
           version=$(git cliff --bump)
           echo "version=$version" >> $TAG_VERSION
+          echo $TAG_VERSION
 
   manual_approval:
     runs-on: ubuntu-latest
