--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
         id: changelog
         run: |
           git cliff --bump -o CHANGELOG.md
-          echo git cliff --bumped-version
+          echo "git cliff --bumped-version"
           echo "git cliff --bumped-version" >> $TAG_VERSION
           echo $TAG_VERSION
 
