--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,8 @@ jobs:
         id: changelog
         run: |
           git cliff --bump -o CHANGELOG.md
-          echo "git cliff --bumped-version"
-          echo "git cliff --bumped-version" >> $TAG_VERSION
+          git cliff --bumped-version
+          git cliff --bumped-version >> $TAG_VERSION
           echo $TAG_VERSION
 
   manual_approval:
