--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,9 +32,7 @@ jobs:
         id: changelog
         run: |
           git cliff --bump -o CHANGELOG.md
-          git cliff --bumped-version
           export TAG_VERSION=$(git cliff --bumped-version)
-          echo $TAG_VERSION
 
   manual_approval:
     runs-on: ubuntu-latest
@@ -78,12 +76,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Bump version and push tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Create and push new tag
+        run: |
+          git tag $TAG_VERSION
+          git push origin $TAG_VERSION
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate a changelog
         id: changelog
