--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,9 +30,7 @@ jobs:
 
       - name: Generate a changelog
         id: changelog
-        run: |
-          git cliff --bump -o CHANGELOG.md
-          export TAG_VERSION=$(git cliff --bumped-version)
+        run: git cliff --bump -o CHANGELOG.md
           
       - name: Upload changelog for review         
         uses: actions/upload-artifact@v2
@@ -82,9 +80,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          
+
       - name: Create and push new tag
         run: |
+          git cliff --bump -o CHANGELOG.md
+          export TAG_VERSION=$(git cliff --bumped-version)
           git tag $TAG_VERSION
           git push origin $TAG_VERSION
         env:
